# todo-app

backend/: db.sql  pyproject.toml
backend/todo_app/: app.py  globals.py  schemas.py
backend/todo_app/model/: models.py
frontend/: .env  package.json
frontend/TaskFrontend/src/: vite-env.d.ts
frontend/TaskFrontend/src/components/AddTask/: AddTask.tsx
frontend/TaskFrontend/src/components/TasksList/: TasksList.styles.css  TasksList.tsx
frontend/TaskFrontend/src/components/TasksList/Task/: DeleteModal.tsx  Task.tsx
frontend/src/: App.tsx
frontend/src/components/AddTask/: AddTask.styles.css
frontend/src/components/TasksList/Task/: Task.styles.css  TaskEditor.tsx  TaskViewer.tsx
