[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Dennis Robertson <dennis.m.robertson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
